--- a/mqtt-tool-html-js.html
+++ b/mqtt-tool-html-js.html
@@ -28,7 +28,7 @@
   <label for="port1_input" id="port1_text" >Port:</label>
  <select id="port1_input">
     <option value="1883">1883 (unencrypted, unauthenticated)</option>
-    <option value="1884">1884 (unencrypted, unauthenticated)</option>
+    <option value="1884">1884 (unencrypted, authenticated)</option>
     <option value="8883">8883 (encrypted, unauthenticated)</option>
     <option value="8884">8884 (encrypted, client certificate required)</option>
     <option value="8885">8885 (encrypted, authenticated)</option>
