--- a/mqtt-tool-html-js.html
+++ b/mqtt-tool-html-js.html
@@ -316,20 +316,20 @@ if (domainPattern.test(hostname)) {
     }
 
       // Set up the client
-      client = new Paho.MQTT.Client(hostname, Number(port), clientId);
+   client = new Paho.MQTT.Client(hostname, Number(port), clientId);
      
-      // Connection result event handler
       client.onConnectionLost = onConnectionLost;
 
-	// Error message event handler
       client.onMessageArrived = onMessageArrived;
 
       // Set client options
      options = {
         onSuccess: connected, // After connected, subscribes
         onFailure: onFail,    // Useful for logging / debugging
+	 
        	 //useSSL: true,
 	//timeout: 3000
+
       };
 
  var sslDropdown = document.getElementById("ssl_input");
@@ -898,20 +898,22 @@ document.getElementById('checkbox1_input').disabled = false;
 
     function onMessageArrived(message) {
 
+  var topicArrived = message.destinationName;
+  var senderArrived = topicArrived.split("/")[0];
+
  onMessageArrivedCalled = true;
 
-   if (message.retained === true) {logConsole('[' + getFormattedTimestamp() + ']' + ' Receiving Retained Message: ' + message.payloadString + ' (Publisher: Client #' + clientId + ', QoS: ' + message.qos + ')');}
+   if (message.retained === true) {logConsole('[' + getFormattedTimestamp() + ']' + ' Receiving Retained Message: ' + //message.payloadString + ' (Publisher: Client #' + topicArrived + ', QoS: ' + message.qos + ')');}
+message.payloadString + ' (QoS: ' + message.qos + ')');}
 
-   if (message.retained === false) {logConsole('[' + getFormattedTimestamp() + ']' + ' Receiving: ' + message.payloadString + ' (From: Client #' + clientId + ', QoS: ' + message.qos + ')');}
+   if (message.retained === false) {logConsole('[' + getFormattedTimestamp() + ']' + ' Receiving: ' + //message.payloadString + ' (From: Client #' + topicArrived + ', QoS: ' + message.qos + ')');}
+message.payloadString + ' (QoS: ' + message.qos + ')');}
 
-      if (message.destinationName == topic) {
-
-      }
-
-
+   
 
 
     }
+
 
 
     function send() {
@@ -950,8 +952,8 @@ if (selectedRetain === true) {logConsole('[' + getFormattedTimestamp() + ']' + '
 
 if (selectedRetain === false) {logConsole('[' + getFormattedTimestamp() + ']' + ' Sending: ' + payload + ' (QoS: ' + message.qos + ', Retain: No)');}
 
-//messageId = "Random Message #" + parseInt(Math.random() * 100000, 10);
- //     document.getElementById('message_input').value = messageId;
+messageId = "Random Message #" + parseInt(Math.random() * 100000, 10);
+     document.getElementById('message_input').value = messageId;
 
 
 
